--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "vite build && node deploy.js",
+    "deploy": "gh-pages -d gh-pages"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
